--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -25340,6 +25340,77 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheNexus.RewardFlavour
   nameWithType: QuestTheNexus.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore
+  name: QuestTheramore
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html
+  commentId: T:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore
+  nameWithType: QuestTheramore
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.#ctor(MacroTools.LegendSystem.Capital,Rectangle)
+  name: QuestTheramore(Capital, Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore__ctor_MacroTools_LegendSystem_Capital_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.#ctor(MacroTools.LegendSystem.Capital,Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.QuestTheramore(MacroTools.LegendSystem.Capital, Rectangle)
+  nameWithType: QuestTheramore.QuestTheramore(Capital, Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.#ctor*
+  name: QuestTheramore
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.QuestTheramore
+  nameWithType: QuestTheramore.QuestTheramore
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestTheramore.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnComplete
+  nameWithType: QuestTheramore.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestTheramore.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.OnFail
+  nameWithType: QuestTheramore.OnFail
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardDescription
+  nameWithType: QuestTheramore.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardDescription
+  nameWithType: QuestTheramore.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardFlavour
+  nameWithType: QuestTheramore.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.html#WarcraftLegacies_Source_Quests_Dalaran_QuestTheramore_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Dalaran.QuestTheramore.RewardFlavour
+  nameWithType: QuestTheramore.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Draenei
   name: WarcraftLegacies.Source.Quests.Draenei
   href: api-source/WarcraftLegacies.Source.Quests.Draenei.html
@@ -29147,90 +29218,6 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestOldHatreds.RewardFlavour
   nameWithType: QuestOldHatreds.RewardFlavour
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore
-  name: QuestTheramore
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html
-  commentId: T:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore
-  nameWithType: QuestTheramore
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.#ctor(Rectangle)
-  name: QuestTheramore(Rectangle)
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore__ctor_Rectangle_
-  commentId: M:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.#ctor(Rectangle)
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.QuestTheramore(Rectangle)
-  nameWithType: QuestTheramore.QuestTheramore(Rectangle)
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.#ctor*
-  name: QuestTheramore
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore__ctor_
-  commentId: Overload:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.#ctor
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.QuestTheramore
-  nameWithType: QuestTheramore.QuestTheramore
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnAdd(MacroTools.FactionSystem.Faction)
-  name: OnAdd(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_OnAdd_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnAdd(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnAdd(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestTheramore.OnAdd(Faction)
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnAdd*
-  name: OnAdd
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_OnAdd_
-  commentId: Overload:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnAdd
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnAdd
-  nameWithType: QuestTheramore.OnAdd
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnComplete(MacroTools.FactionSystem.Faction)
-  name: OnComplete(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_OnComplete_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnComplete(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnComplete(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestTheramore.OnComplete(Faction)
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnComplete*
-  name: OnComplete
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_OnComplete_
-  commentId: Overload:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnComplete
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnComplete
-  nameWithType: QuestTheramore.OnComplete
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnFail(MacroTools.FactionSystem.Faction)
-  name: OnFail(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_OnFail_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnFail(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnFail(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestTheramore.OnFail(Faction)
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnFail*
-  name: OnFail
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_OnFail_
-  commentId: Overload:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnFail
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.OnFail
-  nameWithType: QuestTheramore.OnFail
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardDescription
-  name: RewardDescription
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_RewardDescription
-  commentId: P:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardDescription
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardDescription
-  nameWithType: QuestTheramore.RewardDescription
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardDescription*
-  name: RewardDescription
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_RewardDescription_
-  commentId: Overload:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardDescription
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardDescription
-  nameWithType: QuestTheramore.RewardDescription
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardFlavour
-  name: RewardFlavour
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_RewardFlavour
-  commentId: P:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardFlavour
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardFlavour
-  nameWithType: QuestTheramore.RewardFlavour
-- uid: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardFlavour*
-  name: RewardFlavour
-  href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.html#WarcraftLegacies_Source_Quests_KulTiras_QuestTheramore_RewardFlavour_
-  commentId: Overload:WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardFlavour
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.KulTiras.QuestTheramore.RewardFlavour
-  nameWithType: QuestTheramore.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip
   name: QuestUnlockShip
   href: api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.html
